[gd_scene load_steps=3 format=3 uid="uid://cpba2mmlmd7si"]

[ext_resource type="Script" uid="uid://coqcnoukn4fg7" path="res://Calculators/Strain/strain.gd" id="1_63d3y"]
[ext_resource type="Texture2D" uid="uid://dnswhwlkqm24a" path="res://Calculators/CalculatorBackground.png" id="2_g8lpy"]

[node name="PercentageColdWork" type="Node2D"]
script = ExtResource("1_63d3y")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = -192.0
offset_top = -144.0
offset_right = 352.0
offset_bottom = 216.0
texture = ExtResource("2_g8lpy")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Constants" type="Node2D" parent="."]

[node name="Title" type="Label" parent="Constants"]
offset_left = -128.0
offset_top = -128.0
offset_bottom = -104.0
text = "Strain"

[node name="A0" type="Label" parent="Constants"]
offset_left = -176.0
offset_top = -104.0
offset_right = -64.0
offset_bottom = -64.0
text = "L0"

[node name="AF" type="Label" parent="Constants"]
offset_left = -176.0
offset_top = -40.0
offset_right = -64.0
text = "Lf"

[node name="CW" type="Label" parent="Constants"]
offset_left = -176.0
offset_top = 24.0
offset_right = -64.0
offset_bottom = 64.0
text = "Îµ"

[node name="SideDisplay" type="RichTextLabel" parent="."]
offset_left = 24.0
offset_top = -104.0
offset_right = 337.0
offset_bottom = 152.0
focus_mode = 2
text = "L0 and Lf should be in the same units
Strain should be in decimal, not percent.
i.e 0.4, not 40"
vertical_alignment = 1
selection_enabled = true

[node name="OriginalLength" type="TextEdit" parent="."]
offset_left = -128.0
offset_top = -104.0
offset_bottom = -64.0
placeholder_text = "Initial Length"

[node name="FinalLength" type="TextEdit" parent="."]
offset_left = -128.0
offset_top = -40.0
placeholder_text = "Final Length"

[node name="Strain" type="TextEdit" parent="."]
offset_left = -128.0
offset_top = 24.0
offset_bottom = 64.0
placeholder_text = "Strain"

[node name="Calculate" type="Button" parent="."]
offset_left = -128.0
offset_top = 88.0
offset_bottom = 152.0
text = "Calculate"

[node name="Clear" type="Button" parent="."]
offset_left = -128.0
offset_top = 160.0
offset_bottom = 200.0
text = "Clear"

[connection signal="text_changed" from="OriginalLength" to="." method="_on_original_length_text_changed"]
[connection signal="text_changed" from="FinalLength" to="." method="_on_final_length_text_changed"]
[connection signal="text_changed" from="Strain" to="." method="_on_strain_text_changed"]
[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
